--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,7 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     compileSdkVersion 29
+    ndkVersion "22.0.6917172"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
